--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Michael Lajlev &middot; Digital product designer</title>
     <link rel="shortcut icon" href="img/favicon.ico">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/all.css">
   </head>
   <body>
     <div class="wrapper">
