--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
   <body>
     <div class="wrapper">
       <div class="intro">
-        <div class="name">
-          <div class="title">Digital product designer</div>
-          Michael Lajlev
-          <div class="title">36 years, 3 kids, 1 wife & no private jets</div>
-        </div>
-        <h1>I get motivated by building products with other crafty thinkers</h1>
+        <h1>Hi. I'm Michael <span class="no-shadow">👋</span><br><br>I get motivated by building products with other crafty thinkers</h1>
       </div>
-      <ul class="blocks">
+      <ul class="blocks testimonials">
         <li>
           <blockquote>
             <p>Michael is just a pleasure to work with and is excellent when you ping-pong on new ideas. You always walk away smarter. I never met anyone with such <strong>an amazing curiosity</strong> towards new developments within technology.</p>
@@ -42,29 +37,32 @@
           </blockquote>
         </li>
 
-        <li>
+        <li class="hide">
           <blockquote>
             <p>Michael is creative, fast and intuitive in his workflow and at the same time he is able to maintain a solid focus on the quality and durability of his products. He has <strong>a great eye for simplicity</strong> and for boiling down complex situations to minimalist design solutions.</p>
             <footer><img src="img/sindal.jpg" alt="Jonas Sindal"><a href="http://dk.linkedin.com/in/jonassindal" title="See Jonas's Linkedin profil"><span class="name">Jonas Sindal</span><span class="title">Concept developer @ CfDP</span></a></footer>
           </blockquote>
         </li>
 
-        <li>
+        <li class="hide">
           <blockquote>
             <p>Michael was an excellent Prototype Designer, he worked really well in our team and he's very friendly. He could <strong>prototype features really quick</strong>, so quick that he had time to do some extra prototypes just to try out different scenarios. He's excellent.</p>
             <footer><img src="img/victor.jpg" alt="Victor Erixon"><a href="http://www.linkedin.com/in/victorerixon/en" title="See Victor's Linkedin profil"><span class="name">Victor Erixon</span><span class="title">Product designer @ Trustpilot</span></a></footer>
           </blockquote>
         </li>
       </ul>
-    </div>
-    <section class="footprint">
-      <ul>
-        <li class="hide-mobile"><a href="http://linkedin.com/in/lajlev">Linkedin</a></li>
-        <li><a href="http://facebook.com/lajlev">Facebook</a></li>
-        <li><a href="http://github.com/lajlev">Github</a></li>
-        <li><a href="https://blog.laj.lv">Blog</a></li>
+      <a href="#more" class="button button--more-testimonials">More Testimonals</a>
+
+      <ul class="blocks">
+        <li>
+          <blockquote>
+            <p><strong>#randomfact</strong> I'm really enjoy playing boardgames. My 3 latest played is: <span class="bgg-last-3-games"></span>.</p>
+            <small> <a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">Source: Boardgamegeek.com</a></small>
+          </blockquote>
+        </li>
       </ul>
-    </section>
+      <a href="http://m.me/lajlev" target="_blank" class="button button--more-testimonials"> Send me a message</a>
+    </div>
   </body>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
@@ -81,19 +79,4 @@
     ga('send', 'pageview');
 
   </script>
-  <!-- Piwik -->
-  <script type="text/javascript">
-    var _paq = _paq || [];
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function() {
-      var u="//piwik.laj.lv/";
-      _paq.push(['setTrackerUrl', u+'piwik.php']);
-      _paq.push(['setSiteId', 1]);
-      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-      g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-    })();
-  </script>
-  <noscript><p><img src="//piwik.laj.lv/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
-  <!-- End Piwik Code -->
 </html>
