--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <ul class="blocks">
         <li>
           <blockquote>
-            <p><strong>#randomfact</strong> I'm really enjoy playing boardgames. My 3 latest played is: <span class="bgg-last-3-games"></span>.</p>
+            <p><strong>#randomfact</strong> I'm really enjoy playing boardgames. Latest played is <span class="bgg-last-3-games"></span>.</p>
             <small> <a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">Source: Boardgamegeek.com</a></small>
           </blockquote>
         </li>
