fun facts added

--- a/index.html
+++ b/index.html
@@ -56,18 +56,23 @@
       <ul class="blocks">
         <li>
           <blockquote>
-            <p><strong>#randomfact</strong> I'm really enjoy playing boardgames. Latest played is <span class="bgg-last-3-games"></span>.</p>
-            <small> <a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">Source: Boardgamegeek.com</a></small>
+            <p><strong>#FunFact</strong> I love boardgames 🤓 My latest played games is <span class="bgg-last-3-games"></span>.</p>
+            <small>All my played games on <a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">Boardgamegeek</a></small>
+          </blockquote>
+        </li>
+        <li>
+          <blockquote>
+            <p><strong>#FunFact</strong> I enjoy watching movies & tvshows 🍿 Let me share my opinions about <span class="imdb-random-movie"></span></p>
+            <small>All my ratings on <a href="http://www.imdb.com/user/ur22077709/ratings">IMDB</a></small>
           </blockquote>
         </li>
       </ul>
-      <a href="http://m.me/lajlev" target="_blank" class="button button--more-testimonials"> Send me a message</a>
+      <a href="http://m.me/lajlev" target="_blank" class="button button--more-testimonials">Chat with me 💬</a>
     </div>
   </body>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
   <script src="scripts/trianglify.js"></script>
-  <script src="scripts/masonry.pkgd.min.js"></script>
   <script src="scripts/main.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
