--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </li>
         <li>
           <blockquote>
-            <p><strong>#FunFact</strong> I enjoy watching movies & tvshows 🍿 Let me share my opinions about <span class="imdb-random-movie"></span></p>
+            <p><strong>#FunFact</strong> I enjoy watching movies & tvshows 🍿 Let me share my opinion about <span class="imdb-random-movie"></span></p>
             <small>All my ratings on <a href="http://www.imdb.com/user/ur22077709/ratings">IMDB</a></small>
           </blockquote>
         </li>
