--- a/index.html
+++ b/index.html
@@ -57,17 +57,22 @@
         <li>
           <blockquote>
             <p><strong>#FunFact</strong> I love boardgames 🤓 My latest played games is <span class="bgg-last-3-games"></span>.</p>
-            <small>All my played games on <a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">Boardgamegeek</a></small>
-          </blockquote>
-        </li>
-        <li>
-          <blockquote>
-            <p><strong>#FunFact</strong> I enjoy watching movies & tvshows 🍿 Let me share my opinion about <span class="imdb-random-movie"></span></p>
-            <small>All my ratings on <a href="http://www.imdb.com/user/ur22077709/ratings">IMDB</a></small>
+            <small><a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">My  Boardgamegeek profile</a></small>
           </blockquote>
         </li>
       </ul>
-      <a href="http://m.me/lajlev" target="_blank" class="button button--more-testimonials">Chat with me 💬</a>
+
+      <img class="profile" src="img/profile-2014-smaller.jpg" alt="Picture of Michael Lajlev">
+      <a href="http://m.me/lajlev" target="_blank" class="button button--more-testimonials">Chat with me</a>
+
+      <ul class="blocks">
+        <li>
+          <blockquote>
+            <p><strong>#FunFact</strong> I enjoy watching movies & tvshows 🍿 Let me share my opinion about <span class="imdb-random-movie"></span></p>
+            <small><a href="http://www.imdb.com/user/ur22077709/ratings">My IMDB ratings</a></small>
+          </blockquote>
+        </li>
+      </ul>
     </div>
   </body>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
