--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:image" content="http://laj.lv/img/logo.png">
     <title>Michael Lajlev &middot; Digital product designer</title>
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700i,800" rel="stylesheet">css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700i,800" rel="stylesheet">
     <link rel="stylesheet" href="/all.css">
   </head>
   <body>
