add last.fm + new favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta property="og:image" content="http://laj.lv/img/logo.png">
     <title>Michael Lajlev &middot; Digital product designer</title>
     <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700i,800" rel="stylesheet">
     <link rel="stylesheet" href="/all.css">
   </head>
@@ -53,23 +56,30 @@
       </ul>
       <a href="#more" class="button button--more-testimonials">More Testimonals</a>
 
-      <ul class="blocks">
-        <li>
-          <blockquote>
-            <p><strong>#FunFact</strong> I love boardgames 🤓 My latest played games is <span class="bgg-last-3-games"></span>.</p>
-            <small><a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">My  Boardgamegeek profile</a></small>
-          </blockquote>
-        </li>
-      </ul>
 
       <img class="profile" src="img/profile-2014-smaller.jpg" alt="Picture of Michael Lajlev">
       <a href="http://m.me/lajlev" target="_blank" class="button button--more-testimonials">Chat with me</a>
 
+
+
+
       <ul class="blocks">
         <li>
           <blockquote>
-            <p><strong>#FunFact</strong> I enjoy watching movies & tvshows 🍿 Let me share my opinion about <span class="imdb-random-movie"></span></p>
+            <p><strong>#playing</strong> I love boardgames 🤓 &nbsp;My latest played games is <span class="bgg-last-3-games">...</span>.</p>
+            <small><a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">My Boardgamegeek profile</a></small>
+          </blockquote>
+        </li>
+        <li>
+          <blockquote>
+            <p><strong>#watching</strong> I enjoy watching movies & tv series 🍿 &nbsp;Let me share my opinion about <span class="imdb-random-movie">...</span></p>
             <small><a href="http://www.imdb.com/user/ur22077709/ratings">My IMDB ratings</a></small>
+          </blockquote>
+        </li>
+        <li>
+          <blockquote>
+            <p><strong>#listening</strong> I listen too all kinds of music 🎶 &nbsp;Lately it has been <span class="lastfm-top3-month"></span></p>
+            <small><a href="http://www.imdb.com/user/ur22077709/ratings">My last.fm profile</a></small>
           </blockquote>
         </li>
       </ul>
