ajax loader added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <div class="intro">
-        <h1>Hi. I'm Michael <span class="no-shadow">👋</span><br><br>I get motivated by building products with other crafty thinkers</h1>
+        <h1>Hallo stranger <span class="no-shadow">👋</span>&nbsp; I'm Michael<br>a digital product designer</h1>
       </div>
       <ul class="blocks testimonials">
         <li>
@@ -56,33 +56,34 @@
       </ul>
       <a href="#more" class="button button--more-testimonials">More Testimonals</a>
 
-
-      <img class="profile" src="img/profile-2014-smaller.jpg" alt="Picture of Michael Lajlev">
-      <a href="http://m.me/lajlev" target="_blank" class="button button--more-testimonials">Chat with me</a>
-
-
-
+      <div class="intro">
+        <h1>My quantified self</h1>
+      </div>
 
       <ul class="blocks">
         <li>
           <blockquote>
-            <p><strong>#playing</strong> I love boardgames 🤓 &nbsp;My latest played games is <span class="bgg-last-3-games">...</span>.</p>
-            <small><a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">My Boardgamegeek profile</a></small>
+            <p><strong>#listening</strong> I listen too all kinds of music 🎶 &nbsp;Lately it has been <span class="lastfm-top3-month ajax-spinner"></span></p>
+            <small><a href="http://www.imdb.com/user/ur22077709/ratings">My last.fm profile</a></small>
           </blockquote>
         </li>
         <li>
           <blockquote>
-            <p><strong>#watching</strong> I enjoy watching movies & tv series 🍿 &nbsp;Let me share my opinion about <span class="imdb-random-movie">...</span></p>
+            <p><strong>#watching</strong> I enjoy watching movies & tv series 🍿 &nbsp;Let me share my opinion about <span class="imdb-random-movie ajax-spinner"></span></p>
             <small><a href="http://www.imdb.com/user/ur22077709/ratings">My IMDB ratings</a></small>
           </blockquote>
         </li>
         <li>
           <blockquote>
-            <p><strong>#listening</strong> I listen too all kinds of music 🎶 &nbsp;Lately it has been <span class="lastfm-top3-month"></span></p>
-            <small><a href="http://www.imdb.com/user/ur22077709/ratings">My last.fm profile</a></small>
+            <p><strong>#playing</strong> I love boardgames 🤓 &nbsp;My latest played games is <span class="bgg-last-3-games ajax-spinner"></span></p>
+            <small><a href="https://boardgamegeek.com/plays/thumbs/user/lajlev/subtype/boardgame/">My Boardgamegeek profile</a></small>
           </blockquote>
         </li>
       </ul>
+
+
+      <img class="profile" src="img/profile-2014-smaller.jpg" alt="Picture of Michael Lajlev">
+      <a href="http://m.me/lajlev" target="_blank" class="button button--more-testimonials">Chat with me</a>
     </div>
   </body>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
