--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="http://laj.lv/img/logo.png">
+    <meta property="og:image" content="img/profile-2014-smaller.jpg">
     <title>Michael Lajlev &middot; Digital product designer</title>
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
